--- a/pre-learn-22.css
+++ b/pre-learn-22.css
@@ -1,92 +1,214 @@
-.page {
-    display: flex;
-    width: 70%;
-    height: 100%;
-    margin: auto; }
-
-body {
-    background-color: rgb(121, 110, 110);
-    z-index: -100;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+* {
+    padding: 0;
     margin: 0;
+    font-family: Helvetica;
 }
 
-.logo {
+h1 {
+    margin: 10px; 
+}
+.page{
+    margin: 0px 100px;
+
+}
+.sidebar {
+    
+    background-color: #e5e5e5;
+    padding: 30px;
+    z-index: 10; 
+    margin-left: 10px;
+
+}
+
+.main{
     display: flex;
-    align-items: center;
+    background-color: #ffffff;
+    
 }
-
-.top {
-    height: 20vh;
-    background-color: rgb(37, 33, 33);
+.image{
     display: flex;
-    align-items: center;
-}
-
-.navbar ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-}
-
-nav {
-    background-color: gray;
-}
-
-.navbar ul li {
-    display: flex;
-    padding: 4px 10px;
-}
-
-.image {
-    height: 100px;
-    width: 100px;
-    background-color: rgb(194, 185, 185);
     margin: 30px;
 }
-
 .maintext{
     display: flex;
     
     flex-wrap: wrap;
 }
-.content {
+.content{
     display: flex;
     align-items: center;
-    background-color: aliceblue;
+}
+.content-text hr{
+    margin: 10px 80px;}
+
+.header {
+    /* width: 960px; */
+
+    background-color: #333333;
+
+
 }
 
-.content-text {
-    width: 70%;
-}
 
-.main {
-    display: flex;
-    
-}
 
-.sidebar {
-    background-color: rgb(194, 185, 185);
-    width: 30%; 
+
+
+.logo {
     padding: 30px;
+    display: flex;
+
+    align-items: center;
+}
+
+
+
+.navbar {
+
+
+    background-color: #666666;
+    display: flex;
+    padding: 0px;
+
+
+
+}
+
+.navbar ul {
+    display: flex;
+    list-style: none;
+
+}
+
+.navbar ul li {
+    display: flex;
+    padding: 4px 10px;
+    align-items: center;
+    font-size: 16px;
+    letter-spacing: 0px;
+    line-height: 30px;
+    color: #ffffff;
+    
+    transition: background-color 0.3s ease;
+}
+
+.navbar ul li:hover {
+    background-color: lightgray;
+}
+
+
+.navbar ul hr {
+    margin: 0px;
+    width: 1px;
+    height: 50px;
+    border: none;
+    background-color: #333333;
+
 }
 
 footer {
-    background-color: rgb(37, 33, 33);
-    color: aliceblue;
+    background-color: #333333;
+    color: #cccccc;
     text-align: center;
     width: 100%;
     padding: 10px 0;
 }
-
-@media only screen and (max-width: 768px) {
-    .page {
-        display: flex;
-        align-self: center;
-        width: 100%;
-        height: 70%;
-        margin: auto;
-    }
+body{
+    background-color: #dddddd;
 }
+@media only screen and (max-width: 460px) {
+    .navbar {
+
+        height: auto;
+        background-color: #666666;
+        display: flex;
+        flex-direction: column;
+        padding: 0px;
+    }
+
+    .navbar ul {
+        display: flex;
+        list-style: none;
+        flex-direction: column;
+
+    }
+
+    .navbar ul hr {
+        margin: 0px;
+        width: auto;
+        height: 1px;
+        border: none;
+        background-color: #333333;
+    }
+    .content{
+        display: flex;
+        flex-direction: column;
+    }
+    .image{
+        display: block;
+    }
+    .content-text{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+
+    }
+    .content-text hr{
+        height: auto;
+    width: 200px;
+    border: solid 1px;
+    display: flex;
+   margin: 30px;
+    background-color: #333333;
+        
+
+    }
+
+.sidebar{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
+    
+}
+
+.main{
+    display: flex;
+    flex-direction: column;
+    
+}
+.page{
+    margin: 0px
+}
+
+}
+@media only screen and (max-width: 700px) {
+    .sidebar{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0px;
+
+        
+    }
+    .page{
+        margin: 0px
+    }
+    .main{
+        display: flex;
+        flex-direction: column;
+
+        
+    }
+
+    .sidebar hr{
+        height: auto;
+    width: 200px;
+    border: solid 1px;
+    display: flex;
+   margin: 10px;
+    background-color: #333333;
+    
+}}
