--- a/pre-learn-22.css
+++ b/pre-learn-22.css
@@ -2,10 +2,17 @@
     padding: 0;
     margin: 0;
     font-family: Helvetica;
+    font-weight: 100;
+    line-height: 1.5;
 }
 
 h1 {
-    margin: 10px; 
+    margin: 10px 0px;
+font-size: 24px;
+letter-spacing: -1px;
+line-height: 30px;
+color: #333333;
+font-weight: bold;
 }
 .page{
     margin: 0px 100px;
@@ -31,15 +38,19 @@ h1 {
 }
 .maintext{
     display: flex;
-    
+    font-size: 14px;
+letter-spacing: 0px;
+line-height: 22px;
+color: #666666;
     flex-wrap: wrap;
 }
 .content{
     display: flex;
     align-items: center;
+    border-bottom: 1px solid;
+    margin: 0px 30px;
 }
-.content-text hr{
-    margin: 10px 80px;}
+
 
 .header {
     /* width: 960px; */
